--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" href="imagens/beris_logo-01.ico">
     <title>Beris - Odonto</title>
   </head>
   <body>
-   <div class="navbar navbar-expand-lg navbar-light">
-     <a class="navbar-brand" href="#">
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="#">
        <img src="imagens/beris_logo-01.png" alt="Logo da clínica Ortodontica - Beris" width="100">
-     </a>
-     <div class="collapse navbar-collapse">
+    </a>
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">Quem somos</a>
@@ -28,7 +29,10 @@
           <a class="nav-link" href="#">Parceiros</a>
         </li>
       </ul>
-     </div>
-   </div>  
+    </div>
+   </nav>
+   <section>
+     
+   </section>
   </body>
 </html>
