--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <li>
           <a class="nav-link" href="#">Parceiros</a>
         </li>
+        <li>
+          <a class="nav-link" href="#">Procedimentos</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#">Colaboradores</a>
+        </li>
       </ul>
     </div>
    </nav>
